k8s/Unit/unit-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: unit-service
  namespace: unit
spec:
  selector:
    app: unit-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9996
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unit-ingress
  namespace: unit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: unit-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unit-service
                port:
                  number: 80

---
